test/controlplane/services/dualstack/manifests/echo-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  selector:
    matchLabels:
      name: echo
  replicas: 2
  template:
    metadata:
      labels:
        name: echo
    spec:
      containers:
      - name: echo-container
        image: docker.io/cilium/json-mock:1.2
        livenessProbe:
          exec:
            command:
            - curl
            - -sS
            - -o
            - /dev/null
            - localhost
        readinessProbe:
          exec:
            command:
            - curl
            - -sS
            - -o
            - /dev/null
            - localhost
      - name: echo-container-udp
        image: quay.io/cilium/echoserver-udp:v2020.01.30
