test/controlplane/services/dualstack/manifests/echo-svc-dualstack.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-dualstack
spec:
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: RequireDualStack
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: tftp
    port: 69
    protocol: UDP
  selector:
    name: echo
